--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,10 @@
-<title>Etusivu</title>
-<h1>Etusivu</h1>
-<b>Tervetuloa keskustelusovellukseen!
+{% if session.user_id %}
+<p>Olet kirjautunut nimellä: {{ username }}</p>
+<a href="/logout">Kirjaudu ulos</a>
+<!--- chat areas here --->
+{% else %}
+<p> Et ole kirjautunyt sisään!</p>
+<a href = "/login">Kirjaudu sisään</a>
+<a href="/register">Rekisteröidy</a>
+
+{% endif %}
