can create chain and topics

--- a/templates/chain.html
+++ b/templates/chain.html
@@ -15,6 +15,7 @@
     <p>
         <input type="submit" value="kommentoi">
         <input type="hidden" name="id" value="{{ id }}">
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 </form>
 <br>
 
