--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,21 @@
 {% if session.user_id %}
 <p>Olet kirjautunut nimellä: {{ username }}</p>
-<a href="/logout">Kirjaudu ulos</a>
+<a href="/logout">Kirjaudu ulos</a> <br>
+{% for topic in topics%}
+{{ topic.topic_name }} <br>
+Uusin viesti: ???? <br>
+<a href="/topic/{{ topic.id }}">Mene keskustelualueelle</a>
+<hr>
+{% endfor %}
+
+{% if is_adim %}
+<p> Luo uusi keskustelualue </p>
+<form action="/create_topic" method="POST"> 
+    nimi: <input type="text" name="topic_name"> <br>
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
+
+</form>
+{% endif %}
 {% else %}
 <p> Et ole kirjautunyt sisään!</p>
 <a href = "/login">Kirjaudu sisään</a>
