--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@ Uusin viesti: ???? <br>
 {% if is_admin %}
 <p> Luo uusi keskustelualue </p>
 <form action="/create_topic" method="POST"> 
-    nimi: <input type="text" name="topic_name"> <br>
+    nimi: <input type="text" name="topic_name" required minlength="1" maxlength="32"> <br>
     <input type="submit" value="luo keskustelualue">
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 
