--- a/templates/message.html
+++ b/templates/message.html
@@ -7,8 +7,8 @@
 
 <form action="/edit_message" method="post">
     muokattu viesti : 
-        <textarea name="new_content" rows="5" cols="40">
-        </textarea>
+        <textarea name="new_content" rows="5" cols="40" required minlength="1" maxlength="128">
+</textarea>
         <input type="submit" value="muokkaa viestiä">
         <input type="hidden" name="id" value="{{ id }}">
         <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
